tests/syntax_error/missing_end_quote_in_byte.jou
import "stdlib/io.jou"

# Output: compiler error in file "tests/syntax_error/missing_end_quote_in_byte.jou", line 5: missing ' to end the byte literal
def main() -> int:
    printf('?)
    return 0
